--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          
           <div class="col-md-8">
            <h3>Kent S Johnson</h3>
-            <p>Professional software developer and data analyst with many years experience. Committed to using my powers for good.</p>
+            <p class='lead'>Professional software developer and data analyst with many years experience. Committed to using my powers for good.</p>
           </div>
           <div class="col-md-4"><img class='img-responsive img-circle' src="img/DSCN0787.JPG" alt="Kent"></div>
         </div>
@@ -61,7 +61,7 @@
      <!-- Example row of columns -->
       <div class="row" id="professional">
        <h2 class='section-header'>Professional Work</h2>
-       <div class='col-md-12'>In my day job I write software to acquire and analyze tissue images used for cancer research.</div>
+       <div class='col-md-12 lead'>In my day job I write software to acquire and analyze tissue images used for cancer research.</div>
          <div class="col-md-6">
           <h3>Multispectral Imaging</h3>
           <div class="img-wrap">
@@ -81,7 +81,7 @@
      <!-- Example row of columns -->
       <div class="row" id="bwfs">
         <h2 class='section-header'>Boston West Fair Skies</h2>
-       <div class='col-md-12'>I am on the steering committee of <a href="bostonwestfairskies.org">Boston West Fair Skies</a>, a citizen activist group working for a fairer distribution of airplane noise from Boston Logan Airport. My analysis and visualizations have helped move the the conversation with Massport and the FAA from stone-walling to engagement.</div>
+       <div class='col-md-12 lead'>I am on the steering committee of <a href="bostonwestfairskies.org">Boston West Fair Skies</a>, a citizen activist group working for a fairer distribution of airplane noise from Boston Logan Airport. My analysis and visualizations have helped move the the conversation with Massport and the FAA from stone-walling to engagement.</div>
         <div class="col-md-6">
           <h3>Flight Paths from Logan 33L</h3>
           <div class="img-wrap">
@@ -101,7 +101,7 @@
      <!-- Example row of columns -->
       <div class="row" id="cambridge">
        <h2 class='section-header'>Cambridge Civic Data</h2>
-       <div class='col-md-12'>I work with Cambridge civic groups to map data from the <a href='http://data.cambridgema.gov' target="_blank">Cambridge Open Data portal</a>.</div>
+       <div class='col-md-12 lead'>I work with Cambridge civic groups to map and analyze data from the <a href='http://data.cambridgema.gov' target="_blank">Cambridge Open Data portal</a>.</div>
         <div class="col-md-6">
           <h3>Cambridge Tree Map</h3>
           <div class="img-wrap">
