--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             }
         </style>
         <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>               <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+       <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
