--- a/FCC/Weather/index.html
+++ b/FCC/Weather/index.html
@@ -32,24 +32,15 @@
       <div class="text-center">
         <div class="btn-group btn-group-xs" data-toggle="buttons">
           <label class="btn btn-primary active" id="F">
-            <input type="radio" name="options" autocomplete="off" checked>F
+            <input type="radio" name="options" autocomplete="off" checked>°F
           </label>
           <label class="btn btn-primary" id="C">
-            <input type="radio" name="options" autocomplete="off">C
+            <input type="radio" name="options" autocomplete="off">°C
           </label>
-        </div>
+        </div>&nbsp;
+        <i id='marker' class="fa fa-lg fa-map-marker" data-toggle="modal" data-target="#map-modal"></i>
       </div>
     </div>
-
-<!-- Map -->
-<iframe class='center-block' id='map'
-  width="400"
-  height="250"
-  frameborder="0"
-  src="" allowfullscreen>
-</iframe>
-
-<hr>
 
 <footer id='contact'>
   <div class="container">
@@ -65,6 +56,26 @@
     </div>
   </div>
 </footer>
+       
+       <!-- This is the modal dialog which shows the map -->
+    <div class="modal fade" tabindex="-1" role="dialog" id='map-modal'>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          </div>
+          <div class="modal-body">
+            <iframe class='center-block' id='map'
+              width="400"
+              height="250"
+              frameborder="0"
+              src="" allowfullscreen>
+            </iframe>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+                     
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
