Add FCC portfolio page and link to it from main page

--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
           <div class="col-md-6"></div>
       </div>
 
+     <div class="row" id="FCC">
+       <h2 class='section-header'>Free Code Camp</h2>
+       <div class='col-md-12 lead'>I am completing the <a href="https://freecodecamp.com">Free Code Camp</a> Front End Developer Certification. View my projects <a href="FCC/">here.</a></div>
+    </div>
+
 <footer id='contact'>
   <div class="container">
     <div class="row">
