Add target=_blank to links

--- a/FCC/index.html
+++ b/FCC/index.html
@@ -19,7 +19,7 @@
      <!-- Example row of columns -->
       <div class="row" id="professional">
        <h2>Free Code Camp</h2>
-       <div class='col-md-12 lead'>These projects were completed as part of the <a href="https://www.freecodecamp.com">Free Code Camp</a> Front End Development Certification.</div>
+       <div class='col-md-12 lead'>These projects were completed as part of the <a href="https://www.freecodecamp.com" target="_blank">Free Code Camp</a> Front End Development Certification.</div>
          
       <div class="col-md-4">
           <h3>Tribute Page</h3>
