--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
      <div class="row" id="FCC">
        <h2 class='section-header'>Free Code Camp</h2>
-       <div class='col-md-12 lead'>I am completing the <a href="https://freecodecamp.com">Free Code Camp</a> Front End Developer Certification. View my projects <a href="FCC/">here.</a></div>
+       <div class='col-md-12 lead'>I am completing the <a href="https://freecodecamp.com" target="_blank">Free Code Camp</a> Front End Developer Certification. View my projects <a href="FCC/">here.</a></div>
     </div>
 
 <footer id='contact'>
