Add Wikipedia search project

--- a/FCC/index.html
+++ b/FCC/index.html
@@ -45,6 +45,14 @@
           </div>
         </div>
         
+        <div class="col-md-4">
+          <h3>Wikipedia Search</h3>
+          <div class="img-wrap">
+             <a class='description' href="Wikipedia/" target="_blank">Simple Wikipedia search.</a>
+              <img class='img-responsive img-portfolio' src="img/Wikipedia.png" alt="Wikipedia search screen grab">
+          </div>
+        </div>
+        
       </div>
 
 <footer id='contact'>
