Tweaks to portfolio index page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="#professional">Professional</a></li>
         <li><a href="#bwfs">BWFS</a></li>
         <li><a href="#cambridge">Cambridge</a></li>
+        <li><a href="#FCC">Free Code Camp</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       </div><!--/.navbar-collapse -->
@@ -50,7 +51,7 @@
          
           <div class="col-md-8">
            <h3>Kent S Johnson</h3>
-            <p class='lead'>Professional software developer and data analyst with many years experience. Committed to using my powers for good.</p>
+            <p class='lead'>Professional software developer and data analyst with many years experience in front-end, back-end and application development. Committed to using my powers for good.</p>
           </div>
           <div class="col-md-4"><img class='img-responsive img-circle' src="img/DSCN0787.JPG" alt="Kent"></div>
         </div>
