--- a/FCC/Calculator/index.html
+++ b/FCC/Calculator/index.html
@@ -18,7 +18,7 @@
     <body>
  
     <div class='calculator'>
-    <div class="row output"></div>
+    <div class="row output"><span></span></div>
     <div class="row">
       <button class='button'>(</button>
       <button class='button'>)</button>
