Add Calculator to FCC index page

--- a/FCC/index.html
+++ b/FCC/index.html
@@ -52,6 +52,15 @@
               <img class='img-responsive img-portfolio' src="img/Wikipedia.png" alt="Wikipedia search screen grab">
           </div>
         </div>
+
+               
+        <div class="col-md-4">
+          <h3>Calculator</h3>
+          <div class="img-wrap">
+             <a class='description' href="Calculator/" target="_blank">Simple Calculator.</a>
+              <img class='img-responsive img-portfolio' src="img/Calculator.png" alt="Calculator screen grab">
+          </div>
+        </div>
         
       </div>
 
