Update home page and links

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
          <div class="col-md-6">
           <h3>Multispectral Imaging</h3>
           <div class="img-wrap">
-             <a class='description' href="http://www.perkinelmer.com/lab-solutions/resources/docs/BRO_Phenoptics_012380_04.pdf" target="_blank">Multispectral imaging of stained tissue samples allows researchers to see detailed relationships between tumor cells and their environment.</a>
+             <a class='description' href="img/BRO_Phenoptics-Workflow_012380A_04.pdf" target="_blank">Multispectral imaging of stained tissue samples allows researchers to see detailed relationships between tumor cells and their environment.</a>
               <img class='img-responsive img-portfolio' src="img/Multispectral.png" alt="Multispectral image of stained tissue.">
           </div>
       </div>
        <div class="col-md-6">
           <h3>Spatial Analysis</h3>
           <div class="img-wrap">
-             <a class='description' href="http://www.perkinelmer.com/lab-solutions/resources/docs/BRO_Phenoptics_012380_04.pdf" target="_blank">Spatial analysis shows touching cells, giving insight to inter-cellular interactions in the tumor environment.</a>
+             <a class='description' href="https://perkinelmer.github.io/phenoptr/" target="_blank">Spatial analysis shows touching cells, giving insight to inter-cellular interactions in the tumor environment.</a>
               <img class='img-responsive img-portfolio' src="img/SpatialAnalysis.png" alt="Visualization of touching cells">
           </div>
         </div>
@@ -82,8 +82,8 @@
 
      <!-- Example row of columns -->
       <div class="row" id="bwfs">
-        <h2 class='section-header'>Boston West Fair Skies</h2>
-       <div class='col-md-12 lead'>I am on the steering committee of <a href="bostonwestfairskies.org">Boston West Fair Skies</a>, a citizen activist group working for a fairer distribution of airplane noise from Boston Logan Airport. My analysis and visualizations have helped move the the conversation with Massport and the FAA from stone-walling to engagement.</div>
+        <h2 class='section-header'>Airplane Noise</h2>
+       <div class='col-md-12 lead'>I support citizen activist groups working for a fairer distribution of airplane noise from Boston Logan Airport. My analysis and visualizations helped move the the conversation with Massport and the FAA from stone-walling to engagement.</div>
         <div class="col-md-6">
           <h3>Flight Paths from Logan 33L</h3>
           <div class="img-wrap">
